<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cloudlet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connect_text">connecting to cloudlet</string>
    <string name="connectionfailed_text">cannot connect to cloudlet.</string>
    <string name="title_activity_service">Cloudlet</string>
    <string name="service_text">Select what to do on Cloudlet</string>
    <string name="title_activity_file_list">Tap to download a file</string>
    <string name="title_activity_user">File Sharer</string>
    <string name="view_files_on_cloudlet">Download Files from Cloudlet</string>
    <string name="view_files_on_phone">View Files on this Phone</string>
    <string name="remove_files_from_cloudlet">Remove Files From Cloudlet</string>
    <string name="upload">Upload Files to Cloudlet</string>
    <string name="files">Files</string>
    <string name="chooser_title">Select A File</string>
    <string name="empty_directory">Empty Directory</string>
	<string name="storage_removed">Storage was removed or unmounted.</string>
	<string name="choose_file">Select a file OR tap back to return</string>
	<string name="error_selecting_file">Error selecting File</string>
	<string name="internal_storage">Internal storage</string>
	<string name="title_activity_file_view">Tap to open a file</string>
	<string name="view_file">Select a file to view</string>
	<string name="download_file">Select a file to download</string>
	<string name="return_to_login_button">Change username</string>
	<string name="return_to_services">&lt;&lt; Go back to services</string>

</resources>
