<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_vertical"
    tools:context="com.example.cloudlet.UserActivity" >

    <LinearLayout
        android:id="@+id/bottompanel"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/view_files_on_cloudlet"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/view_files_on_cloudlet" />
    </LinearLayout>

    <Button
        android:id="@+id/upload"
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:text="@string/upload" />
    
    <Button
        android:id="@+id/view_files_on_phone"
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:text="@string/view_files_on_phone" />

    <Button
        android:id="@+id/remove_files_on_cloudlet"
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:text="@string/remove_files_from_cloudlet" />

    <Button
        android:id="@+id/return_to_services"
        android:layout_width="fill_parent"
        android:layout_height="66dp"
        android:text="@string/return_to_services" />

</LinearLayout>